--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ SECTION WRAPS
 /* Header Wrap */
 
 #headerwrap {
-  background: url(../img/header-bg.jpg) no-repeat center top;
+  background: url(../img/a1.jpg) no-repeat center top;
   margin-top: 60px;
   padding-top: 140px;
   text-align: center;
