--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 
 body {
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   font-family: "Lato";
   font-weight: 300;
   font-size: 16px;
